# MV_review_classification

./: .gitignore  README.md  main.py  model.py  pyproject.toml  requirements.txt  solution.ipynb  write_hf.ipynb
final_model/: config.json
untitled folder/: solution.ipynb
