[project]
name = "mv-review-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25-vectorizer>=0.0.4",
    "catboost>=1.2.10",
    "einops>=0.8.2",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "natasha>=1.6.0",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "polars>=1.41.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "wandb>=0.28.0",
]
